  value are available via checkError()
- Scalar hashes can now be passed to Java methods expecting an Object
  value (if desired)
- character arrays returned by Java calls will now be converted to a 
  Sleep string
- Sleep strings will now be recognized as valid matches for Java methods
  requesting a byte[] or char[] parameter.
- Sleep scalars returned by Java calls will be returned as is.
- increased performance (x3) of Sleeps internal functions to convert a 
  String to a non-mangled byte array. 
- &remove returns data structure data was removed from
- extended &add to accept a hash and multiple key/value pairs for
  adding stuff to an existing hash.

2.1-beta 17  (17 Jun 07)
===========
- reduced number of Class.forName calls made when parsing scripts...
  should help those using Sleep in Java applets ;) 
  [p.s. sorry I wasn't able to take care of this sooner]
- added a new type of literal for resolving a Java class i.e.:
  ^java.util.LinkedList resolves to java.util.LinkedList.class
  ^Map$Entry would resolve to java.util.Map$Entry.class  etc..
- added a new predicate 'isa' for determining if an object is a 
  instance of a specific class i.e.:  "string" isa ^String
- added a better error message for class cast exceptions caught w/i
  the interpreter.
- added a $__SCRIPT__ variable to indicate the name of the executed
  script when running a Sleep script from the command line.
- added a typeOf($scalar) function to retrieve the class backing the
  specified scalars value.  
- added the ability to specify a failure message with an assert i.e.:
  assert <predicate> : <message>; 
- setField can now accept a class literal as its first argument for
  updating a static field
- &use can now accept a class literal as its first argument (safer
  than specifying bridge as a string as class literals are resolved 
  at compile time)
- updated &cast and &casti to allow a class literal to be specified
  as the type to cast to.  