@@ -1,0 +1,3 @@
+@(1, 2, 3, 4.0, 5, &closure[identity.sl:1]#1, 4, 6, 7, 8, 9, '&closure[identity.sl:1]#1')
+@(1, 2, 3, 4.0, 5)
+@(&closure[identity.sl:1]#1)
